Fixed visual alignment issue for the deck components.

--- a/src/stylesheets/DeckList.css
+++ b/src/stylesheets/DeckList.css
@@ -39,7 +39,6 @@
 }
 
 .decklistContainer {
-    margin-top: 15px;
     display: inline-block;
 }
 
